deploy/k8s/umbrella-streaming/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-headless
  namespace: umbrella-streaming
  labels:
    app.kubernetes.io/name: kafka
    app.kubernetes.io/part-of: umbrella
spec:
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: client
      port: 9092
      targetPort: 9092
    - name: controller
      port: 9093
      targetPort: 9093
  selector:
    app.kubernetes.io/name: kafka
